# flask-db-play

./: .gitignore  README.md  pyproject.toml
src/flask_db_play/: __init__.py  home.py
src/flask_db_play/templates/: base.html  home.html
tests/integration/: conftest.py  test_home.py
