[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-db-play"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Sparrow0hawk", email = "alexjcoleman@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "Flask~=2.3.0"
]

[tool.hatch.version]
path = "src/flask_db_play/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]
[tool.hatch.envs.default.scripts]
app = "flask --app src/flask_db_play run"
test = "pytest {args:tests}"


[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
dependencies = [
  "pytest",
  "black>=23.1.0",
  "mypy>=1.0.0",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/flask_db_play tests}"
style = [
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
line-length = 120
skip-string-normalization = true
